--- a/flexbox.html
+++ b/flexbox.html
@@ -34,12 +34,65 @@
 
       .container {
         /* STARTER */
+        height: 500px;
+        /* padding: 2rem; */
         font-family: sans-serif;
         background-color: #ddd;
         font-size: 40px;
         margin: 40px;
 
         /* FLEXBOX */
+        display: flex;
+        gap: 1rem;
+        align-items: stretch;
+        align-items: flex-start;
+        align-items: flex-end;
+        align-items: center;
+
+        /* align-content: stretch;
+        align-content: flex-start;
+        align-content: flex-end;
+        align-content: space-between;
+        align-content: space-around;
+        align-content: space-evenly;
+        align-content: center;
+        */
+
+        justify-content: flex-end;
+        justify-content: space-between;
+        justify-content: space-around;
+        justify-content: center;
+        justify-content: space-evenly;
+        justify-content: flex-start;
+
+        /* flex-wrap: wrap; */
+      }
+
+      .el {
+        /* 
+        DEFAULTS
+        flex-grow: 0;
+        flex-shrink: 1;
+        flex-basis: auto;
+        */
+        /* flex-basis: 100px; */
+        /* flex-shrink: 0; */
+        /* flex-grow: 1; */
+        flex: 0 0 6rem;
+      }
+
+      .el--1 {
+        align-self: flex-start;
+        /* flex-grow: 4; */
+      }
+
+      .el--5 {
+        order: 1;
+        align-self: stretch;
+      }
+
+      .el--6 {
+        order: -1;
       }
     </style>
   </head>
